# doc/swagger.yaml
@@ -56,26 +56,7 @@ paths:
       summary: valid jwt token and show user info
       tags:
       - profile
-  /profile/reciviers/{usr}:
-    get:
-      consumes:
-      - application/json
-      description: get receivers
-      parameters:
-      - description: USR
-        in: query
-        name: string
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: ""
-      summary: get receivers list
-      tags:
-      - profile
-  /profile/reciviers/{usr}/{id}:
+  /profile/receivers/{id}:
     delete:
       consumes:
       - application/json
@@ -99,7 +80,26 @@ paths:
       summary: delete receiver from receiver list
       tags:
       - profile
-  /profile/reciviers/{usr}/{id}/{receiver}:
+  /profile/receivers/{usr}:
+    get:
+      consumes:
+      - application/json
+      description: get receivers
+      parameters:
+      - description: USR
+        in: query
+        name: string
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: get receivers list
+      tags:
+      - profile
+  /profile/receivers/{usr}/{id}/{receiver}:
     patch:
       consumes:
       - application/json
@@ -128,7 +128,7 @@ paths:
       summary: update receiver in receiver list
       tags:
       - profile
-  /profile/reciviers/{usr}/{receiver}:
+  /profile/receivers/{usr}/{receiver}:
     post:
       consumes:
       - application/json
